force-app/main/default/objects/Training_Information__c/Training_Information__c.object-meta.xml
<CustomObject>
    <description>Store information needed for training.</description>
    <label>Training Information</label>
    <nameField>
        <label>Training Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>