force-app/main/default/objects/Training_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Information</relationshipLabel>
    <relationshipName>Training_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>