force-app/main/default/objects/Training_Information__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>end date for Webinar/Learning lab</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>