force-app/main/default/objects/Training_Information__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>start date for webinar/learning lab</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>