force-app/main/default/objects/Training_Information__c/recordTypes/Learning_Lab.recordType-meta.xml
<RecordType>
    <fullName>Learning_Lab</fullName>
    <active>true</active>
    <description>Learning lab</description>
    <label>Learning Lab</label>
</RecordType>