force-app/main/default/objects/Training_Information__c/recordTypes/Webinar.recordType-meta.xml
<RecordType>
    <fullName>Webinar</fullName>
    <active>true</active>
    <description>Webinar</description>
    <label>Webinar</label>
</RecordType>