force-app/main/default/objects/Training_Information__c/validationRules/PSA_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PSA_Date_Validation</fullName>
    <active>true</active>
    <description>end date can not be prior to start date</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>end date can not be prior to start date</errorMessage>
</ValidationRule>